<resources>
    <string name="app_name">PABDIS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="agreement">SIGNATURE OVER PRINTED NAME</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save Signature</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_survey">Survey/Vaccination</string>
    <string name="menu_map">Map / Location</string>
    <string name="menu_list_owner">List of Owners</string>
    <string name="menu_list_pet">List of Pet</string>
    <string name="menu_logout">Logout</string>
    <string name="start_survey">Start survey!</string>
    <string name="first_name">Household First Name</string>
    <string name="last_name">Household Last Name</string>
    <string name="r_first_name">Respondent First Name</string>
    <string name="r_last_name">Respondent Last Name</string>
    <string name="municipality">Municipality</string>
    <string name="vacc_prompt">Vaccination</string>
    <string name="brgy_prompty">Choose Municipality</string>
    <string name="muni_prompt">Choose Barangay</string>
    <string name="house_no">House No./ Sitio </string>
    <string name="get_geolocation">Get geolocation</string>
    <string name="add">PROCEED SURVEY</string>
    <string name="contact_number">Contact Number</string>
    <string name="household_head_last_name">Household Head Last Name</string>
    <string name="household_head_first_name">Household Head First Name</string>
    <string name="respondent_lastname">Respondent LastName</string>
    <string name="respondent_first_name">Respondent First Name</string>
    <string name="respondent">Respondent</string>
    <string-array name="swine">
        <item>Hog Cholera</item>
        <item>Porcine Circovirus 2 (PCV2)</item>
        <item>Mycoplasma</item>
    </string-array>
    <string name="other_animals_birds">Other Animals / Birds</string>
    <string name="apiary">APICULTURE </string>
    <string name="carabao">Carabao</string>
    <string name="cattle">Cattle</string>
    <string name="fishery">Fishery &amp; Apiary</string>
    <string name="goat">Goat</string>
    <string name="household_consumption">Weekly Consumption</string>
    <string name="production">Production (in Dozens) Egg</string>
    <string-array name="breed_monkey">
        <item>Simian</item>
    </string-array>
    <string-array name="source_pet">
        <item>Introduced</item>
        <item>Indigenous</item>
    </string-array>
    <string-array name="breed_dod">
        <item>Akita</item>
        <item>Alaskan Malamute</item>
        <item>American Bully</item>
        <item>American Bulldog</item>
        <item>Aspin</item>
        <item>Basset Hound</item>
        <item>Beagle</item>
        <item>Belgian Malinois</item>
        <item>Boxer</item>
        <item>Boston Terrier</item>
        <item>Chow chow</item>
        <item>Corgi</item>
        <item>Cocker Spaniel</item>
        <item>Collie (Rough)</item>
        <item>Chihuahua</item>
        <item>Dachshund</item>
        <item>Dalmatian</item>
        <item>Dobermann</item>
        <item>English Bulldog</item>
        <item>French Bulldog</item>
        <item>German Shepherd</item>
        <item>Golden Retriever</item>
        <item>Great Dane</item>
        <item>Japanese Spitz</item>
        <item>Jack Russell Terrier</item>
        <item>Labrador Retriever</item>
        <item>Lhasa Apso</item>
        <item>Maltese</item>
        <item>Mexican Hairless Dog</item>
        <item>Mini Pincher</item>
        <item>Mixed</item>
        <item>Pomeranian</item>
        <item>Poodle</item>
        <item>Pug</item>
        <item>Rottweiler</item>
        <item>St. Bernard</item>
        <item>Shih-Tzu</item>
        <item>Schnauzer</item>
        <item>Shetland Sheepdog</item>
        <item>Siberian Husky</item>
        <item>Yorkshire Terrier</item>
        <item>Others</item>
    </string-array>
    <string name="gender">SEX</string>
    <string-array name="breed_cat">
        <item>Puspin</item>
        <item>Mixed</item>
        <item>Persian</item>
        <item>Siamese</item>
        <item>Others</item>
    </string-array>
    <string-array name="species">
        <item>Dog</item>
        <item>Cat</item>
        <item>Monkey</item>
    </string-array>
    <string-array name="color_mark">
        <item>White</item>
        <item>Black</item>
        <item>Brown</item>
        <item>Orange</item>
        <item>Gray</item>
        <item>Tricolor</item>
        <item>Others</item>
    </string-array>
    <string name="chicken">Chicken (in kg)</string>
    <string name="vaccination">VACCINATION</string>
    <string-array name="ownertype">
        <item>Household</item>
        <item>Establishment</item>
        <item>Cooperative/ Association</item>
    </string-array>
    <string name="vaccinated_by">VACCINATED BY</string>
    <string name="boar_native">Boar (Native)</string>
    <string name="boar_upgrade">Boar (Upgrade)</string>
    <string name="git_native">Sow/Git (Native)</string>
    <string name="git_upgrade">Sow/Git (Upgrade)</string>
    <string name="grower_native">Growers and Finishers (Native)</string>
    <string name="grower_upgrade">Growers and Finishers (Upgrade)</string>
    <string name="pig_native">Piglets and Weanlings (Native)</string>
    <string name="pig_upgrade">Piglets and Weanlings (Upgrade)</string>
    <string name="sl_farm_kg">Slaughtered on Farm (total kg)</string>
    <string name="sl_farm_hd">Slaughtered on Farm (total head)</string>
    <string name="sl_abb_kg">Slaughtered in Slaughterhouse (total kg)</string>
    <string name="sl_abb_hd">Slaughtered in Slaughterhouse (total head)</string>
    <string name="dressed_kg">Dressed in Household (total kg)</string>
    <string name="sold_kg">Sold Live (total kg)</string>
    <string name="dressed_hd">Dressed in Household (total head)</string>
    <string name="sold_hd">Sold Live (total head)</string>
    <string name="broilers">Broilers</string>
    <string name="layers">Layers</string>
    <string name="local">Native/Improved/Local Breed</string>
    <string name="bull_d">Bull (Dairy)</string>
    <string name="cow_d">Cow/Heifer (Dairy)</string>
    <string name="calf_d">Calf (Dairy)</string>
    <string name="bull_m">Bull (Meat)</string>
    <string name="cow_m">Cow/Heifer (Meat)</string>
    <string name="calf_m">Calf (Meat)</string>
    <string name="carabull_c">Carabull (Crossbreed)</string>
    <string name="caracow_c">Caracow/Caraheifer (Crossbreed)</string>
    <string name="caracalf_c">Caracalf (Crossbreed)</string>
    <string name="carabull_n">Carabull (Native)</string>
    <string name="caracow_n">Caracow/Caraheifer (Native)</string>
    <string name="caracalf_n">Caracalf (Native)</string>
    <string name="buck_d">Buck (Dairy)</string>
    <string name="doe_d">Doe (Dairy)</string>
    <string name="kids_d">Kids (Dairy)</string>
    <string name="buck_m">Buck (Meat)</string>
    <string name="doe_m">Doe (Meat)</string>
    <string name="kids_m">Kids (Meat)</string>
    <string name="total_area">Total Area</string>
    <string name="total_income">Total Income</string>
    <string name="sheep">Sheep</string>
    <string name="horse">Horse</string>
    <string name="rabbit">Rabbit</string>
    <string name="duck">Duck</string>
    <string name="pigeon">Pigeon</string>
    <string name="quail">Quail</string>
    <string name="turkey">Turkey</string>
    <string name="others">Others</string>
    <string name="beef">Beef (in kg)</string>
    <string name="carabeef">Carabeef (in kg)</string>
    <string name="pork">Pork (in kg)</string>
    <string name="chicken_tl">Chicken</string>
    <string name="fish">Fish (in kg)</string>
    <string name="egg">Egg (in piece)</string>
    <string name="other_pls_specify">Other (pls. specify)</string>
    <string name="done">DONE</string>
    <string name="age">Age</string>
    <string name="birthday">Birthday</string>
    <string name="choose_an_image">Choose an image</string>
    <string name="pet_name">Pet Name</string>
    <string name="specie">SPECIES</string>
    <string name="breed">BREED</string>
    <string name="pet_image">Pet Image</string>
    <string name="distinct_color">Distinguishing Feature (optional)</string>
    <string name="color_markings">COLOR MARKINGS</string>
    <string name="calf_male_female_below_2_years_old">CALF (male/female, below 2 years old)</string>
    <string name="other_breed">Other Breed</string>
    <string name="other_color_marking">Other Color Marking</string>
    <string name="finish">FINISH VACCINATION</string>
    <string name="choose_date">Choose date</string>
    <string name="with_vaccination">WITH VACCINATION?</string>
    <string name="is_vaccinated">VACCINATED?</string>
    <string name="dewormed">DEWORMED?</string>
    <string name="owner_type">Owner Type</string>
    <string name="name_of_cooperative">Name of Cooperative</string>
    <string name="name_of_establishment">Name of Establishment</string>
    <string name="sow_gilt">SOW / GILT</string>
    <string name="growers_and_finishers_2_months_to_8_months">Growers and Finishers (2 months to 8 months)</string>
    <string name="gamefowl">Gamefowl</string>
    <string name="dual_purpose">Dual Purpose</string>
    <string name="compute">COMPUTE</string>
    <string name="total">TOTAL</string>
    <string name="date_vaccination">DATE VACCINATION</string>
    <string name="goose">GOOSE</string>
    <string name="production_of_eggs_in_pieces">Production of Eggs (in pieces)</string>
    <string name="egg_production">Egg Production</string>
    <string name="source_of_pet">SOURCE OF PET</string>
    <string name="place">Place</string>
    <string name="number_of_household_member">Number of Household Member</string>
    <string name="login">LOGIN</string>
    <string name="update">UPDATE</string>
    <string-array name="muni">
        <item>La Trinidad</item>
        <item>Itogon</item>
        <item>Buguias</item>
        <item>Kabayan</item>
        <item>Sablan</item>
        <item>Mankayan</item>
        <item>Kapangan</item>
        <item>Bokod</item>
        <item>Atok</item>
        <item>Kibungan</item>
        <item>Tublay</item>
        <item>Tuba</item>
        <item>Bakun</item>
    </string-array>
    <string-array name="brgy_lt">
        <item>Alapang</item>
        <item>Alno</item>
        <item>Ambiong</item>
        <item>Bahong</item>
        <item>Balili</item>
        <item>Beckel</item>
        <item>Bineng</item>
        <item>Betag</item>
        <item>Cruz</item>
        <item>Lubas</item>
        <item>Pico</item>
        <item>Poblacion</item>
        <item>Puguis</item>
        <item>Shilan</item>
        <item>Tawang</item>
        <item>Wangal</item>
    </string-array>
    <string-array name="brgy_kib">
        <item>Badeo</item>
        <item>Lubo</item>
        <item>Madaymen</item>
        <item>Palina</item>
        <item>Poblacion</item>
        <item>Sagpat</item>
        <item>Tacadang</item>
    </string-array>
    <string-array name="brgy_it">
        <item>Ampucao</item>
        <item>Dalupirip</item>
        <item>Gumatdang</item>
        <item>Loacan</item>
        <item>Poblacion (Central)</item>
        <item>Tinongdan</item>
        <item>Tuding</item>
        <item>Ucab</item>
        <item>Virac</item>
    </string-array>
</resources>