<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.survey.HouseholdActivity"
    tools:showIn="@layout/activity_survey_household">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:elevation="4dp"
                android:paddingBottom="24dp">

                <TextView
                    android:id="@+id/user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:text="@string/household_consumption"
                    android:textColor="#fff"
                    android:textSize="18dp" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_layout"
                android:layout_marginTop="5dp"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/beef">

                    <EditText
                        android:id="@+id/edtBeef"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/carabeef">

                    <EditText
                        android:id="@+id/edtCarabeef"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="clip_vertical"
                        android:ems="10"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/pork">

                    <EditText
                        android:id="@+id/edtPork"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/chicken">

                    <EditText
                        android:id="@+id/edtChicken"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="clip_vertical"
                        android:ems="10"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/fish">

                    <EditText
                        android:id="@+id/edtFish"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/egg">

                    <EditText
                        android:id="@+id/edtEgg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnProceedSurvey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_height"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/done"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />



            </LinearLayout>




        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>