<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.survey.OtherActivity"
    tools:showIn="@layout/activity_survey_other">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:elevation="4dp"
                android:paddingBottom="24dp">

                <TextView
                    android:id="@+id/user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:text="@string/other_animals_birds"
                    android:textColor="#fff"
                    android:textSize="18dp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_layout"
                android:layout_marginTop="5dp"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sheep">

                    <EditText
                        android:id="@+id/edtSheep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="0"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/horse">

                    <EditText
                        android:id="@+id/edtHorse"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="clip_vertical"
                        android:ems="10"
                        android:text="0"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/rabbit">

                    <EditText
                        android:id="@+id/edtRabbit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="0"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/duck">

                    <EditText
                        android:id="@+id/edtDuck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="clip_vertical"
                        android:ems="10"
                        android:text="0"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>




                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/turkey">

                    <EditText
                        android:id="@+id/edtTurkey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="clip_vertical"
                        android:ems="10"
                        android:text="0"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/goose">

                    <EditText
                        android:id="@+id/edtGoose"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="clip_vertical"
                        android:ems="10"
                        android:text="0"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/total_income"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/total_income"
                    >

                    <EditText
                        android:id="@+id/edtTotal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:ems="10"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textColorHint="@color/textColor" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnProceedSurvey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_height"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/add"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />



            </LinearLayout>


        </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>