<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.updates.PetVaccination"
    tools:showIn="@layout/activity_petvacc">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnDateVacc"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/date_vaccination"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/txtxDateVacc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />
            </TableRow>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtvaccinatedby2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vaccinated_by"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/txtvaccinatedby"
                    style="@style/spinner_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:entries="@array/vaccinated_by"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:text="@string/update"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>